Created an optional results output file in JSON format